--- a/wp-content/themes/understrap-child/css/child-theme.css
+++ b/wp-content/themes/understrap-child/css/child-theme.css
@@ -9804,10 +9804,6 @@ a.skip-link {
     display: inline-block;
     margin: 40px 0; }
 
-.element-item {
-  padding: 0 2px 20px;
-  width: 100%; }
-
 .main-style {
   padding-top: 65px; }
 
@@ -9840,12 +9836,14 @@ a.skip-link {
     padding: 0 15px; }
   .article-style .arrow-style {
     top: 0;
-    right: 0;
+    right: 15px;
     position: absolute;
-    padding: 7px;
+    padding: 8px;
     background-color: #fff; }
     .article-style .arrow-style:hover {
       color: #ff4848; }
+  .article-style .article-style-item {
+    padding-bottom: 20px; }
 
 .pagination-style {
   padding: 30px 0; }
